--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"terser": "^5.44.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^7.0.4",
@@ -76,6 +77,6 @@
 		"svelte"
 	],
 	"dependencies": {
-		"firebase": "^12.2.1"
+		"firebase": "^11.0.1"
 	}
 }
